ref code to get has invitation not by calling each friend separately